feat: who knows

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Aimee's blog -- Write the Code. Change the World.</title>
+  <title>This is the title</title>
   <link rel="shortcut icon" href="./static/img/favicon.ico">
   <meta name="description" content="代码代码...码码码">
   <meta name="keywords" content="Aimee,mangoya,mango,mango ya">
