feat: icon replace

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>This is the title</title>
+  <title>Madokami -- 円神</title>
   <link rel="shortcut icon" href="./static/img/favicon.ico">
-  <meta name="description" content="代码代码...码码码">
-  <meta name="keywords" content="Aimee,mangoya,mango,mango ya">
+  <meta name="description" content="恋符「マスタースパーク」">
+  <meta name="keywords" content="Master Spark">
+  <meta itemprop="image" content="./static/img/icon.jpg">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="black" name="apple-mobile-web-app-status-bar-style">
   <meta name="viewport"
